[package]
name = "algo-vis-rust"
version = "0.1.0"
authors = ["null_lambda <<your_donotreply_email_id>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

console_error_panic_hook = { version = "0.1.7", optional = true }
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
web-sys = "0.3.72"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
